--- a/src/DevIo.App/DevIo.App.csproj
+++ b/src/DevIo.App/DevIo.App.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\DevIo.Data\DevIo.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\imagens\" />
+  </ItemGroup>
+
 </Project>
