--- a/src/DevIo.App/DevIo.App.csproj
+++ b/src/DevIo.App/DevIo.App.csproj
@@ -24,4 +24,6 @@
     <Folder Include="wwwroot\imagens\" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
